--- a/SecondBrain/Views/Account/SignIn.cshtml
+++ b/SecondBrain/Views/Account/SignIn.cshtml
@@ -1,4 +1,4 @@
-﻿@using SecondBrain.Models.DTO
+﻿@    using SecondBrain.Models.DTO
 @model SignIn
 
 @{
@@ -31,8 +31,8 @@
         <form asp-action="SignIn" method="post">
             <div asp-validation-summary="ModelOnly"></div>
             <div>
-                <label asp-for="UserName" class="control-lable">User name</label>
-                <input asp-for="UserName" class="form-control mt-2 mb-2" />
+                <label asp-for="Email" class="control-lable">User name</label>
+                <input asp-for="Email" class="form-control mt-2 mb-2" />
             </div>
             <div>
                 <label asp-for="Password" class="control-lable"></label>
