--- a/SecondBrain/Views/Home/Index.cshtml
+++ b/SecondBrain/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @using SecondBrain.Models
-@model UserTask
+@model             SecondBrain.Models.UserTask
 @{
     ViewData["Title"] = "Home Page";
 }
